Esqueleto definição de classe do personagem

--- a/app/src/main/res/layout/fragment_criar_third.xml
+++ b/app/src/main/res/layout/fragment_criar_third.xml
@@ -23,14 +23,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvCriar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/lohengrin"
             android:text="Mago"
             android:textColor="@color/white"
-            android:textSize="36dp"
+            android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
