--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -29,5 +29,12 @@
         <action
             android:id="@+id/action_criarPersonagemOnboarding_to_personagemFragment"
             app:destination="@id/personagemFragment" />
+        <action
+            android:id="@+id/action_criarPersonagemOnboarding_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.LoginFragment"
+        android:label="LoginFragment" />
 </navigation>
