MenuPopUp Elemento Personagem

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,10 +27,7 @@
 
         <item name="subtitleStyle">@style/Widget.SubTitle1</item>
 
-
-
-
-
+        <item name="popupMenuStyle">@style/PopupMenu</item>
 
 
 
