--- a/app/src/main/res/layout/fragment_criar_personagem_onboarding.xml
+++ b/app/src/main/res/layout/fragment_criar_personagem_onboarding.xml
@@ -13,6 +13,8 @@
 
     </data>
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,26 +75,28 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tiElementoPersonagem"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tiNomePersonagem">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/tiElementoPersonagem"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="32dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginEnd="32dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="1.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/tiNomePersonagem">-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/elemento_hint"
-                android:text="@={viewmodel.elemento}"
-                android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:hint="@string/elemento_hint"-->
+<!--                android:text="@={viewmodel.elemento}"-->
+<!--                android:inputType="textEmailAddress" />-->
+
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <Button
             android:id="@+id/btEntrar"
@@ -100,32 +104,49 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="62dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
             android:onClick="@{fragment::start}"
             android:text="Confirmar"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/btCad"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tiElementoPersonagem" />
+            app:layout_constraintTop_toBottomOf="@+id/btElmento"
+            app:layout_constraintVertical_bias="0.531" />
 
         <Button
             android:id="@+id/btCad"
             style="?secundaryButtonStyle"
             android:layout_width="0dp"
-            android:layout_height="67dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="50dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="40dp"
             android:onClick="@{fragment::back}"
             android:text="Voltar"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btElmento"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="32dp"
+            android:text="@string/elemento_hint"
+            android:onClick="@{fragment::PopUpElement}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tiElementoPersonagem" />
+            app:layout_constraintTop_toBottomOf="@+id/tiNomePersonagem" />
+
 
         <!--        <Button-->
 <!--            android:id="@+id/btCriarConfirma"-->
