--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="teal_200">#c47414</color>
     <color name="amareloInicio">#e6962e</color>
     <color name="amareloVoltar">#FFC3893E</color>
+    <color name="marromPaleta">#453303</color>
 
 <!--    <color name="teal_700">#FF018786</color>-->
     <color name="teal_700">#a03c70</color>
