--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,15 +19,6 @@
         android:background="@drawable/bg2"
         tools:context=".ui.activity.antigos.MainActivity">
 
-        <ImageView
-            android:id="@+id/ivLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
 
         <EditText
             android:id="@+id/etEmailLogin"
@@ -42,33 +33,13 @@
             android:inputType="textEmailAddress"
             android:letterSpacing="0.4"
             android:text="@={viewmodel.email}"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
+            android:textSize="25dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <!--        <com.google.android.material.textfield.TextInputLayout-->
-        <!--            android:id="@+id/etEmailLogin"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginStart="32dp"-->
-        <!--            android:layout_marginEnd="32dp"-->
-        <!--            android:ems="10"-->
-        <!--            android:hint="@string/hint_email"-->
-        <!--            app:layout_constraintBottom_toTopOf="@+id/etSenhaLogin"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/ivLogo">-->
-
-        <!--            <com.google.android.material.textfield.TextInputEditText-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:fontFamily="@font/lohengrin"-->
-        <!--                android:ems="10"-->
-        <!--                android:hint="@string/email_hint"-->
-        <!--                android:inputType="textEmailAddress"-->
-        <!--                android:text="@={viewmodel.email}" />-->
-        <!--        </com.google.android.material.textfield.TextInputLayout>-->
 
         <EditText
             android:id="@+id/etSenhaLogin"
@@ -82,7 +53,9 @@
             android:inputType="numberPassword"
             android:letterSpacing="0.2"
             android:text="@={viewmodel.password}"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
+            android:textSize="25dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -93,11 +66,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:fontFamily="@font/lohengrin"
-            android:letterSpacing="0.3"
+            android:letterSpacing="0.2"
             android:onClick="@{fragmentLogin::forgot}"
             android:text="Esqueci a palavra mágica"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +114,33 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
+
+        <TextView
+            android:id="@+id/tvNome2"
+            style="?nomeStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="192dp"
+            android:text="@string/nome"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView13"
+            android:layout_width="282dp"
+            android:layout_height="168dp"
+            android:layout_marginTop="44dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tvNome2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.534"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/paredemedieval1"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
