--- a/app/src/main/res/layout/fragment_personagem.xml
+++ b/app/src/main/res/layout/fragment_personagem.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="FragmentPersonagem"
+            name="fragmentPersonagem"
             type="br.iesb.mobile.rpg_pi2_20211.ui.fragment.PersonagemFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +21,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
             android:text="Explorar"
+            android:onClick="@{fragmentPersonagem::map}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
