--- a/app/src/main/res/layout/fragment_splashscreen.xml
+++ b/app/src/main/res/layout/fragment_splashscreen.xml
@@ -14,6 +14,19 @@
         tools:context=".OnboardingFragment"
         app:layoutDescription="@xml/fragment_splashscreen_scene">
 
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gifImageview3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/screen2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
@@ -39,7 +52,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="32dp"
             android:scaleType="center"
-            android:text="Not Another RPG"
+            android:text="@string/nome"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
