--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -9,7 +9,11 @@
         android:id="@+id/personagemFragment"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.PersonagemFragment"
         android:label="PersonagemFragment"
-        tools:layout="@layout/fragment_personagem"/>
+        tools:layout="@layout/fragment_personagem">
+        <action
+            android:id="@+id/action_personagemFragment_to_mapFragment"
+            app:destination="@id/mapFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.HomeFragment"
@@ -24,9 +28,6 @@
         <action
             android:id="@+id/action_homeFragment_to_chatBotFragment"
             app:destination="@id/chatBotFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_mapFragment"
-            app:destination="@id/mapFragment" />
     </fragment>
     <fragment
         android:id="@+id/criarPersonagemOnboarding"
@@ -35,14 +36,7 @@
         <action
             android:id="@+id/action_criarPersonagemOnboarding_to_personagemFragment"
             app:destination="@id/personagemFragment" />
-        <action
-            android:id="@+id/action_criarPersonagemOnboarding_to_loginFragment"
-            app:destination="@id/loginFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.LoginFragment"
-        android:label="LoginFragment" />
     <fragment
         android:id="@+id/chatBotFragment"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.chatbot.ChatBotFragment"
@@ -53,7 +47,11 @@
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" >
         <action
-            android:id="@+id/action_mapFragment_to_personagemFragment"
-            app:destination="@id/personagemFragment" />
+            android:id="@+id/action_mapFragment_to_batalhaFragment"
+            app:destination="@id/batalhaFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/batalhaFragment"
+        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.batalha.BatalhaFragment"
+        android:label="BatalhaFragment" />
 </navigation>
